force-app/main/default/objects/Topic_T0127__c/Topic_T0127__c.object-meta.xml
<CustomObject>
    <label>Topic T0127</label>
    <pluralLabel>Topic T0127s</pluralLabel>
    <nameField>
        <label>Topic T0127 Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>