force-app/main/default/objects/Topic_T0127__c/fields/Difficulty_Level__c.field-meta.xml
<CustomField>
    <fullName>Difficulty_Level__c</fullName>
    <label>Difficulty Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>